--- a/ui.frontend/package.json
+++ b/ui.frontend/package.json
@@ -10,14 +10,8 @@
   "main": "src/main/webpack/site/main.ts",
   "license": "SEE LICENSE IN LICENSE.txt",
   "scripts": {
-    "dev": "webpack --env dev --config ./webpack.dev.js && clientlib --verbose",
     "prod": "webpack --config ./webpack.prod.js && clientlib --verbose",
-    "start": "webpack-dev-server --open --config ./webpack.dev.js",
-    "sync": "aemsync -d -p ../ui.apps/src/main/content",
-    "chokidar": "chokidar -c \"clientlib\" ./dist",
-    "aemsyncro": "aemsync -w ../ui.apps/src/main/content",
-    "watch": "npm-run-all --parallel start chokidar aemsyncro",
-    "storybook": "start-storybook -p 6006"
+    "watch": "webpack-dev-server --config ./webpack.dev.js"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
